# srm

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/srm/: __init__.py  __main__.py
