[project]
name = "srm"
version = "0.9.0"
description = "SRM - Simple Regex Matcher"
readme = "README.md"
requires-python = ">=3.4"
license = {file = "LICENSE"}
keywords=["regex", "cli", "tool"]
authors = [
    {name="Oliver Wiegers", email="oliver.wiegers@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.scripts]
srm = "srm.__main__:main"

[project.urls]
"Homepage" = "https://github.com/oliverwiegers/srm"
"Repository" = "https://github.com/oliverwiegers/srm"
"Bug Tracker" = "https://github.com/oliverwiegers/srm/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
